show time windows status on each cluster

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -1372,7 +1372,7 @@ channel.deploy.status.failed=Failed
 channel.deployments.chart.title=Resources by channels
 recent.deployments.chart.title=Latest application updates
 spec.subscr.timeWindow.title=Time Window
-spec.subscr.timeWindow=Current status is
+spec.subscr.timeWindow=Current window status is
 spec.subscr.timeWindow.none=This subscription has no time window set.
 spec.subscr.timeWindow.days=Time Window days
 spec.subscr.timeWindow.hours=Time Window hours
