validate cluster labels before save

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -1385,3 +1385,13 @@ load.app.info.notfound=Application {0} not found. If the application was just cr
 edit.app.onlineClusters.summary = Online clusters
 edit.app.labelClusters.summary = Clusters labels
 edit.app.localCluster.summary = Local cluster only
+
+creation.missing.clusterSelector.generic = Define at at least one cluster label on the cluster matching labels section.
+creation.missing.clusterSelector.label = Cluster matching labels section missing label name.
+creation.missing.clusterSelector.value = Cluster matching labels section missing label value.
+creation.missing.clusterSelector.label.field= Label must be set
+creation.missing.clusterSelector.value.field= Value must be set
+clusterSelector.label.field=Label name
+clusterSelector.label.field.ui=Label
+clusterSelector.value.field=Value
+clusterSelector.value.field.ui=Value
