Implement warnings for editing with shared resources

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -286,6 +286,8 @@ creation.missing.timeWindow.days = Select at least one day to create a time wind
 creation.missing.timeWindow.timezone = Select a timezone to create a time window.
 creation.must.select.resource.type = Must select resource type
 
+editing.app.sharedResourceWarning = This application uses a shared {0} resource. Changes to these settings will also affect the following applications:
+
 import.form.invalid.dns.label = The value must be a valid DNS label that consists of up to 63 lowercase alphanumeric characters. The character '-' is also permitted, as long as it does not appear in the first or last position.
 import.form.invalid.url = Invalid URL
 
