--- a/package.json
+++ b/package.json
@@ -91,7 +91,6 @@
     "dustjs-linkedin": "^2.7.5",
     "express": "^4.16.3",
     "express-session": "^1.17.0",
-    "github-api": "^3.3.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "handlebars": "^4.7.6",
@@ -149,7 +148,7 @@
     "request": "^2.88.2",
     "requestretry": "^4.1.1",
     "reselect": "^3.0.1",
-    "security-middleware": "github:open-cluster-management/security-middleware#1.0.0",
+    "security-middleware": "github:open-cluster-management/security-middleware",
     "stylefmt": "^6.0.3",
     "svg-loader": "0.0.2",
     "svg-react-loader": "^0.4.6",
@@ -212,7 +211,7 @@
     "prettier": "1.11.0",
     "properties-parser": "^0.3.1",
     "redux-mock-store": "^1.5.4",
-    "resolve-url-loader": "^3.1.1",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "^7.0.1",
     "selenium-standalone": "^6.16.0",
     "style-loader": "^0.21.0",
