create cypress test for multiple time intervals

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -74,6 +74,11 @@ git:
           date:
             - Thursday
             - Friday
+          hours:
+            - start: "09:00"
+              end: "12:00"
+            - start: "15:00"
+              end: "18:00"
         deployment:
           local: false
           online: false
