Switch to handlebars Based on open-cluster-management/grc-ui#259

--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "carbon-components-react": "^6.63.0",
     "carbon-icons": "^7.0.7",
     "classnames": "^2.2.5",
-    "consolidate": "^0.15.1",
     "cookie-parser": "^1.4.5",
     "cross-env": "^5.1.4",
     "csurf": "^1.9.0",
@@ -87,9 +86,8 @@
     "d3-selection-multi": "^1.0.1",
     "deep-diff": "^1.0.2",
     "downshift": "^1.31.16",
-    "dustjs-helpers": "^1.7.4",
-    "dustjs-linkedin": "^2.7.5",
     "express": "^4.16.3",
+    "express-handlebars": "^5.2.0",
     "express-session": "^1.17.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
