--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
-    "carbon-addons-cloud": "^2.2.0",
-    "carbon-addons-cloud-react": "^1.3.2",
-    "carbon-components": "^9.62.3",
+    "carbon-addons-cloud": "^2.3.0",
+    "carbon-addons-cloud-react": "^1.12.4",
+    "carbon-components": "^9.91.5",
     "carbon-components-react": "^6.63.0",
     "carbon-icons": "^7.0.7",
     "classnames": "^2.2.5",
@@ -80,8 +80,8 @@
     "csurf": "^1.9.0",
     "cypress-multi-reporters": "^1.4.0",
     "cytoscape": "3.2.14",
-    "cytoscape-cola": "^2.2.3",
-    "cytoscape-dagre": "^2.2.2",
+    "cytoscape-cola": "^2.4.0",
+    "cytoscape-dagre": "^2.3.1",
     "d3": "^4.13.0",
     "d3-selection-multi": "^1.0.1",
     "deep-diff": "^1.0.2",
@@ -90,17 +90,17 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.0",
     "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.1",
+    "graphql-tag": "^2.11.0",
     "handlebars": "^4.7.6",
     "handlebars-loader": "^1.6.0",
-    "helmet": "^3.22.0",
-    "http-proxy-middleware": "^1.0.4",
+    "helmet": "^3.23.3",
+    "http-proxy-middleware": "^1.0.6",
     "ignore-styles": "^5.0.1",
     "image2svg-loader": "^0.10.0",
-    "ip-address": "^6.3.0",
-    "ip-cidr": "^2.0.11",
+    "ip-address": "^6.4.0",
+    "ip-cidr": "^2.1.1",
     "jest-sonar-reporter": "^2.0.0",
-    "js-base64": "^2.5.1",
+    "js-base64": "^2.6.4",
     "js-yaml": "^3.12.0",
     "js-yaml-loader": "^1.2.2",
     "loadable-components": "^1.4.0",
@@ -108,41 +108,41 @@
     "log4js": "^6.3.0",
     "mime-types": "^2.1.18",
     "minimist": "^1.2.5",
-    "moment": "^2.22.1",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "monaco-languageclient": "^0.13.0",
     "morgan": "^1.10.0",
     "nconf": "^0.10.0",
     "node-i18n-util": "^1.0.2",
-    "normalizr": "^3.2.4",
+    "normalizr": "^3.6.1",
     "null-loader": "^3.0.0",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.1.0",
+    "query-string": "^6.13.6",
     "ramda": "^0.23.0",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-apollo": "^2.3.1",
     "react-autocomplete": "^1.8.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dnd": "^7.0.2",
-    "react-dnd-html5-backend": "^7.0.2",
-    "react-dom": "^16.13.1",
-    "react-lazyload": "^2.3.0",
+    "react-dnd": "^7.7.0",
+    "react-dnd-html5-backend": "^7.7.0",
+    "react-dom": "^16.14.0",
+    "react-lazyload": "^2.6.9",
     "react-masonry-component": "^6.2.1",
     "react-monaco-editor": "0.36.0",
     "react-native-base64": "0.0.2",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.2",
     "react-router-dom": "^4.2.2",
-    "react-split-pane": "^0.1.84",
-    "react-tag-autocomplete": "^5.5.1",
-    "react-test-renderer": "^16.13.1",
+    "react-split-pane": "^0.1.92",
+    "react-tag-autocomplete": "5.5.1",
+    "react-test-renderer": "^16.14.0",
     "recharts": "^1.4.1",
     "recompose": "^0.27.0",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "requestretry": "^4.1.1",
     "reselect": "^3.0.1",
@@ -158,52 +158,52 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.7.2",
-    "@slack/web-api": "^5.8.0",
+    "@cypress/code-coverage": "^3.8.2",
+    "@slack/web-api": "^5.13.0",
     "apollo-cache-inmemory": "^1.6.2",
     "assets-webpack-plugin": "^3.0.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
-    "babel-jest": "^26.0.1",
+    "babel-jest": "^26.6.1",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chromedriver": "^80.0.0",
     "compression-webpack-plugin": "^1.1.11",
     "cross-fetch": "^3.0.6",
-    "css-loader": "^1.0.0",
-    "cypress": "^4.8.0",
-    "cypress-log-to-output": "^1.0.8",
+    "css-loader": "^1.0.1",
+    "cypress": "^4.12.1",
+    "cypress-log-to-output": "^1.1.2",
     "del-cli": "^1.1.0",
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "enzyme-to-json": "^3.4.3",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.21.1",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-lodash": "^2.7.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.21.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "1.x",
     "filemanager-webpack-plugin": "^1.0.26",
-    "flatpickr": "^4.4.4",
-    "geckodriver": "^1.19.1",
+    "flatpickr": "^4.6.6",
+    "geckodriver": "^1.20.0",
     "git-revision-webpack-plugin": "^2.5.1",
     "husky": "^1.3.1",
     "jest": "23.6.0",
-    "jest-canvas-mock": "^2.2.0",
+    "jest-canvas-mock": "^2.3.0",
     "jest-handlebars": "^1.0.1",
     "jest-tap-reporter": "^1.9.0",
     "jest-yaml-transform": "^0.2.0",
     "jsonfile": "^4.0.0",
     "lint-staged": "^7.0.0",
-    "monaco-editor-webpack-plugin": "^1.7.0",
-    "nightwatch": "^1.3.6",
+    "monaco-editor-webpack-plugin": "^1.9.1",
+    "nightwatch": "^1.5.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^2.1.4",
     "prettier": "1.11.0",
@@ -211,7 +211,7 @@
     "redux-mock-store": "^1.5.4",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^7.0.1",
-    "selenium-standalone": "^6.16.0",
+    "selenium-standalone": "^6.20.1",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^3.8.0",
