--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -25,6 +25,9 @@ objectstore:
           type: blockinterval
           date:
             - Tuesday
+          hours:
+            - start: "18:30"
+              end: "21:00"
         deployment:
           local: false
           online: false
@@ -38,7 +41,20 @@ helm:
         chartName: airflow
         timeWindow:
           setting: true
-          type: active
+          type: activeinterval
+          date:
+            - Monday
+            - Tuesday
+            - Wednesday
+            - Thursday
+            - Friday
+          hours:
+            - start: "08:00"
+              end: "12:00"
+            - start: "14:00"
+              end: "16:00"
+            - start: "18:00"
+              end: "22:00"
         deployment:
           local: true
           online: false
