--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,9 @@
         "jsx-a11y"
     ],
     "settings": {
+        "react" : {
+            "version": "detect"
+        }
     },
     "rules": {
         "indent": [
