patternfly filter chips

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -565,7 +565,7 @@ filter.view.condition.noncompliant=Non-compliant
 filter.view.condition.highVcpu=High vCPU
 filter.view.condition.highStorage=High storage
 filter.view.condition.highMemory=High memory
-filter.remove.tag=Remove filter
+filter.remove.label=Filter
 
 filterbar.type.application = application
 filterbar.type.subscription = subscription
