--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -23,8 +23,8 @@ git:
                 end: "18:00"
           deployment:
             local: false
-            online: true
-            matchingLabel: false 
+            online: false
+            matchingLabel: true 
         - url: https://github.com/fxiang1/app-samples.git
           username: ""
           token: ""
@@ -32,8 +32,8 @@ git:
           path: helloworld
           deployment:
             local: false
-            online: false
-            matchingLabel: true 
+            online: true
+            matchingLabel: false 
 objectstore:
   data:
     - enable: true
@@ -70,10 +70,18 @@ objectstore:
             setting: true
             type: blockinterval
             date:
+              - Monday
               - Tuesday
+              - Wednesday
+              - Thursday
+              - Friday
             hours:
-              - start: "18:30"
-                end: "21:00"
+              - start: "08:00"
+                end: "12:00"
+              - start: "14:00"
+                end: "16:00"
+              - start: "18:00"
+                end: "22:00"
           deployment:
             local: false
             online: false
