--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   "author": "",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
-    "@patternfly/react-core": "^4.47.0",
+    "@open-cluster-management/ui-components": "^0.1.39",
+    "@patternfly/react-core": "^4.75.2",
     "@patternfly/react-icons": "^4.7.4",
     "@patternfly/react-tokens": "2.8.13",
     "apollo-boost": "^0.1.20",
