--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -5,6 +5,27 @@ git:
       name: ui-git
       type: git
       successNumber: 4 #should have at least 4 resources with status success in the cards status
+      new: # used when we add new subscriptions after app creation
+        - url: https://github.com/fxiang1/app-samples.git
+          username: ""
+          token: ""
+          branch: master
+          path: mortgagedc
+          timeWindow:
+            setting: true
+            type: activeinterval
+            date:
+              - Thursday
+              - Friday
+            hours:
+              - start: "09:00"
+                end: "12:00"
+              - start: "15:00"
+                end: "18:00"
+          deployment:
+            local: false
+            online: false
+            matchingLabel: true                 
       config:    
         - url: https://github.com/fxiang1/app-samples.git
           username: ""
@@ -41,6 +62,22 @@ objectstore:
       name: ui-obj
       type: objectstore
       successNumber: 0
+      new: # used when we add new subscriptions after app creation
+        - url: http://ec2-dummy/dev2
+          accessKey: dummy1
+          secretKey: dummy2
+          timeWindow:
+            setting: true
+            type: activeinterval
+            date:
+              - Friday
+            hours:
+              - start: "18:00"
+                end: "22:00"       
+          deployment:
+            local: false
+            online: false
+            matchingLabel: true
       config:
         - url: http://ec2-dummy/dev1
           accessKey: dummy1
@@ -94,6 +131,22 @@ helm:
       name: ui-helm
       type: helm
       successNumber: 0
+      new: # used when we add new subscriptions after app creation
+        - url: https://kubernetes-charts.storage.googleapis.com
+          chartName: aerospike
+          packageVersion: 0.3.3
+          timeWindow:
+            setting: true
+            type: blockinterval
+            date:
+              - Monday
+            hours:
+              - start: "08:00"
+                end: "12:00"            
+          deployment:
+            local: false
+            online: false
+            matchingLabel: true
       config:
         - url: https://kubernetes-charts.storage.googleapis.com
           chartName: airflow
@@ -128,4 +181,3 @@ helm:
             local: false
             online: true
             matchingLabel: false            
-
