validate merge option

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -32,6 +32,7 @@ git:
           token: ""
           branch: master
           path: nginx
+          gitReconcileOption: true
           timeWindow:
             setting: true
             type: activeinterval
