--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -4,7 +4,7 @@ git:
     - enable: true
       name: ui-git
       type: git
-      successNumber: 4 #should have at least 4 resources with status success in the cards status
+      successNumber: 3 #should have at least 3 resources with status success in the cards status
       new: # used when we add new subscriptions after app creation
         - url: https://github.com/fxiang1/app-samples.git
           username: ""
@@ -32,6 +32,7 @@ git:
           token: ""
           branch: master
           path: nginx
+          gitReconcileOption: true
           timeWindow:
             setting: true
             type: activeinterval
