--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -4,7 +4,7 @@ git:
     - enable: true
       name: ui-git
       type: git
-      successNumber: 3 #should have at least 3 resources with status success in the cards status
+      successNumber: 2 #should have at least 3 resources with status success in the cards status
       new: # used when we add new subscriptions after app creation
         - url: https://github.com/fxiang1/app-samples.git
           username: ""
@@ -23,9 +23,10 @@ git:
               - start: "15:00"
                 end: "18:00"
           deployment:
+            existing: true
             local: false
             online: false
-            matchingLabel: true                 
+            matchingLabel: false                 
       config:    
         - url: https://github.com/fxiang1/app-samples.git
           username: ""
@@ -56,7 +57,7 @@ git:
           deployment:
             local: false
             online: true
-            matchingLabel: false 
+            matchingLabel: false
 objectstore:
   data:
     - enable: true
@@ -76,9 +77,10 @@ objectstore:
               - start: "18:00"
                 end: "22:00"       
           deployment:
+            existing: true
             local: false
             online: false
-            matchingLabel: true
+            matchingLabel: false
       config:
         - url: http://ec2-dummy/dev1
           accessKey: dummy1
@@ -124,8 +126,8 @@ objectstore:
                 end: "22:00"
           deployment:
             local: false
-            online: false
-            matchingLabel: true
+            online: true
+            matchingLabel: false
 helm:
   data:
     - enable: true
@@ -145,20 +147,21 @@ helm:
               - start: "08:00"
                 end: "12:00"            
           deployment:
+            existing: true
+            local: false
+            online: false
+            matchingLabel: false
+      config:
+        - url: https://kubernetes-charts.storage.googleapis.com
+          chartName: aerospike
+          packageVersion: 0.3.3
+          deployment:
             local: false
             online: false
             matchingLabel: true
-      config:
         - url: https://kubernetes-charts.storage.googleapis.com
           chartName: airflow
           packageVersion: 7.9.0
-          deployment:
-            local: true
-            online: false
-            matchingLabel: false
-        - url: https://kubernetes-charts.storage.googleapis.com
-          chartName: bookstack
-          packageVersion: 1.2.1
           timeWindow:
             setting: true
             type: blockinterval
@@ -168,9 +171,9 @@ helm:
               - start: "08:00"
                 end: "12:00"            
           deployment:
-            local: false
+            local: true
             online: false
-            matchingLabel: true
+            matchingLabel: false
     - enable: true
       name: ui-helm2
       type: helm
@@ -182,3 +185,4 @@ helm:
             local: false
             online: true
             matchingLabel: false            
+
