--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ build-harness/
 !vbh/.build-harness-bootstrap
 !vbh/build-harness
 !vbh/build-harness-extensions
+tests/userCreatedByTestSuite
+userCreatedByTestSuite
