--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "author": "",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
+    "@open-cluster-management/temptifly": "^0.1.0",
     "@patternfly/react-core": "^4.47.0",
     "@patternfly/react-icons": "^4.7.4",
     "@patternfly/react-tokens": "2.8.13",
@@ -113,7 +114,6 @@
     "minimist": "^1.2.5",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.31",
-    "monaco-languageclient": "^0.13.0",
     "morgan": "^1.10.0",
     "nconf": "^0.10.0",
     "node-i18n-util": "^1.0.2",
@@ -134,7 +134,6 @@
     "react-dom": "^16.13.1",
     "react-lazyload": "^2.3.0",
     "react-masonry-component": "^6.2.1",
-    "react-monaco-editor": "0.36.0",
     "react-native-base64": "0.0.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -205,7 +204,6 @@
     "jest-yaml-transform": "^0.2.0",
     "jsonfile": "^4.0.0",
     "lint-staged": "^7.0.0",
-    "monaco-editor-webpack-plugin": "^1.7.0",
     "nightwatch": "^1.3.6",
     "node-sass": "^4.14.1",
     "postcss-loader": "^2.1.4",
