add default package alias

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -18,7 +18,7 @@ actions.searchResources = Find resources
 app.enter.access.token= Optional: Enter the Git access token
 app.enter.accesskey=Optional: Enter the object store access key
 app.enter.helmrepo.chart.name=Enter name of the target Helm chart
-app.enter.helmrepo.package.alias=Optional: Enter the alias name of the target Helm chart
+app.enter.helmrepo.package.alias=Enter the alias name of the target Helm chart
 app.enter.helmrepo.package.version=Optional: Enter the version or versions for the deployable
 app.enter.helmrepo.password= Optional: Enter the Helm repository password
 app.enter.helmrepo.username=Optional: Enter the Helm repository user name
