--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -11,7 +11,7 @@ action = Action
 
 actions.cancel= Cancel
 actions.create.application = Create application
-actions.create.application.access.denied = You are not authorized to create applications
+actions.create.application.access.denied = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 actions.save = Save
 actions.searchResources = Find resources
 
@@ -43,7 +43,7 @@ application.diagram.view.last.time = Last update: {0}
 button.cancel = Cancel
 button.copyButton.feedback = Copied to clipboard
 button.create = Save
-button.save.access.denied = You are not authorized to save any changes
+button.save.access.denied = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 button.update = Update
 
 changes.maybe.lost = Changes you made may not be saved.
@@ -476,7 +476,7 @@ table.actions.placementrules.edit = Edit placement rule
 table.actions.placementrules.remove = Delete placement rule
 table.actions.placementrules.search = Search placement rule
 table.actions.remove = Remove
-table.actions.remove.unauthorized = You are not authorized to delete this resource
+table.actions.remove.unauthorized = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 table.actions.subscriptions.edit = Edit subscription
 table.actions.subscriptions.remove = Delete subscription
 table.actions.subscriptions.search = Search subscription
