add label and tooltips

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -99,6 +99,9 @@ creation.app.helmrepo.package.version = Package version
 creation.app.helmrepo.password = Password
 creation.app.helmrepo.url = URL
 creation.app.helmrepo.user = Username
+creation.app.insecureSkipVerify.label = Disable server certificate verification
+creation.app.insecureSkipVerify.git.tooltip = Disable server TLS certificate verification for Git server connection.
+creation.app.insecureSkipVerify.helm.tooltip = Disable server TLS certificate verification for Helm server connection.
 creation.app.loading.branch.error=The connection to the Git repository had failed, cannot get branches.
 creation.app.loading.channels = Loading definitions...
 creation.app.loading.namespaces=Loading namespaces...
