--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -46,9 +46,9 @@ git:
               - start: "15:00"
                 end: "18:00"
           deployment:
-            local: false
+            local: true
             online: false
-            matchingLabel: true
+            matchingLabel: false
         - url: https://github.com/fxiang1/app-samples.git
           username: ""
           token: ""
@@ -57,6 +57,18 @@ git:
           deployment:
             local: false
             online: true
+            matchingLabel: false
+    - enable: true
+      name: ui-git2
+      type: git
+      successNumber: 0 #should have at least 0 resources with status success in the cards status
+      config:
+        - url: https://github.com/kubernetes/examples.git
+          branch: master
+          path: cassandra
+          deployment:
+            local: true
+            online: false
             matchingLabel: false
 objectstore:
   data:
