--- a/tests/cypress/config/config.e2e.yaml
+++ b/tests/cypress/config/config.e2e.yaml
@@ -1,60 +1,195 @@
 ---
-objectstore:
-  data:
-    - enable: false
-      name: ui-obj
-      config:
-      - url: ''
-        accessKey: '' 
-        secretKey: ''
-        timeWindow:
-          setting: false
-          type: activeinterval
-          date:
-          - Sunday
-          - Monday
-      - url: ''
-        accessKey: ''
-        secretKey: ''
-        timeWindow:
-          setting: false
-          type: activeinterval
-          date:
-          - Tuesday
-helm:
-  data:
-    - enable: false
-      name: ui-helm
-      config:
-      - url: ''
-        chartName: ''
-        timeWindow:
-          setting: false
-          type: active
 git:
   data:
-    - enable: false
+    - enable: true
       name: ui-git
+      type: git
+      successNumber: 0 #should have at least 0 resources with status success in the cards status
+      new: # used when we add new subscriptions after app creation
+        - url: ""
+          username: ""
+          token: ""
+          branch: ""
+          path: mortgagedc
+          timeWindow:
+            setting: true
+            type: activeinterval
+            date:
+              - Thursday
+              - Friday
+            hours:
+              - start: "09:00"
+                end: "12:00"
+              - start: "15:00"
+                end: "18:00"
+          deployment:
+            existing: true
+            local: false
+            online: false
+            matchingLabel: false
       config:
-      - url: ''
-        username: ''
-        token: ''
-        branch: master
-        path: helloworld
-        timeWindow:
-          setting: false
-          type: blockinterval
-          date:
-          - Monday
-          - Tuesday
-      - url: 
-        username: ''
-        token: ''
-        branch: ''
-        path: ''
-        timeWindow:
-          setting: false
-          type: activeinterval
-          date:
-          - Thursday
-          - Friday
+        - url: ""
+          username: ""
+          token: ""
+          branch: ""
+          path: nginx
+          gitReconcileOption: true
+          timeWindow:
+            setting: true
+            type: activeinterval
+            date:
+              - Thursday
+              - Friday
+            hours:
+              - start: "09:00"
+                end: "12:00"
+              - start: "15:00"
+                end: "18:00"
+          deployment:
+            local: false
+            online: false
+            matchingLabel: true
+        - url: https://github.com/fxiang1/app-samples.git
+          username: ""
+          token: ""
+          branch: ""
+          path: helloworld
+          deployment:
+            local: false
+            online: true
+            matchingLabel: false
+objectstore:
+  data:
+    - enable: true
+      name: ui-obj
+      type: objectstore
+      successNumber: 0
+      new: # used when we add new subscriptions after app creation
+        - url: http://ec2-dummy/dev1
+          accessKey: dummy1
+          secretKey: dummy2
+          timeWindow:
+            setting: true
+            type: activeinterval
+            date:
+              - Friday
+            hours:
+              - start: "18:00"
+                end: "22:00"
+          deployment:
+            existing: true
+            local: false
+            online: false
+            matchingLabel: false
+      config:
+        - url: http://ec2-dummy/dev1
+          accessKey: dummy1
+          secretKey: dummy2
+          timeWindow:
+            setting: true
+            type: blockinterval
+            date:
+              - Monday
+              - Tuesday
+              - Wednesday
+              - Thursday
+              - Friday
+            hours:
+              - start: "08:00"
+                end: "12:00"
+              - start: "14:00"
+                end: "16:00"
+              - start: "18:00"
+                end: "22:00"
+          deployment:
+            local: false
+            online: false
+            matchingLabel: true
+        - url: http://ec2-dummy/dev2
+          accessKey: dummy11
+          secretKey: dummy22
+          timeWindow:
+            setting: true
+            type: activeinterval
+            date:
+              - Monday
+              - Tuesday
+              - Wednesday
+              - Thursday
+              - Friday
+            hours:
+              - start: "08:00"
+                end: "12:00"
+              - start: "14:00"
+                end: "16:00"
+              - start: "18:00"
+                end: "22:00"
+          deployment:
+            local: false
+            online: true
+            matchingLabel: false
+helm:
+  data:
+    - enable: true
+      name: ui-helm
+      type: helm
+      successNumber: 0
+      new: # used when we add new subscriptions after app creation
+        - url: https://kubernetes-charts.storage.googleapis.com
+          username: ""
+          password: ""
+          chartName: aerospike
+          packageVersion: 0.3.3
+          timeWindow:
+            setting: true
+            type: blockinterval
+            date:
+              - Monday
+            hours:
+              - start: "08:00"
+                end: "12:00"
+          deployment:
+            existing: true
+            local: false
+            online: false
+            matchingLabel: false
+      config:
+        - url: https://kubernetes-charts.storage.googleapis.com
+          username: ""
+          password: ""
+          chartName: aerospike
+          packageVersion: 0.3.3
+          deployment:
+            local: false
+            online: false
+            matchingLabel: true
+        - url: https://kubernetes-charts.storage.googleapis.com
+          username: ""
+          password: ""
+          chartName: airflow
+          packageVersion: 7.9.0
+          timeWindow:
+            setting: true
+            type: blockinterval
+            date:
+              - Monday
+            hours:
+              - start: "08:00"
+                end: "12:00"
+          deployment:
+            local: true
+            online: false
+            matchingLabel: false
+    - enable: true
+      name: ui-helm2
+      type: helm
+      successNumber: 0
+      config:
+        - url: https://kubernetes-charts.storage.googleapis.com
+          username: ""
+          password: ""
+          chartName: aerospike
+          deployment:
+            local: false
+            online: true
+            matchingLabel: false
