--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -46,17 +46,17 @@ git:
               - start: "15:00"
                 end: "18:00"
           deployment:
-            local: true
+            local: false
             online: false
-            matchingLabel: false
+            matchingLabel: true
         - url: https://github.com/fxiang1/app-samples.git
           username: ""
           token: ""
           branch: master
           path: helloworld
           deployment:
-            local: false
-            online: true
+            local: true
+            online: false
             matchingLabel: false
     - enable: true
       name: ui-git2
