--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -55,8 +55,20 @@ git:
           branch: master
           path: helloworld
           deployment:
-            local: false
-            online: true
+            local: true
+            online: false
+            matchingLabel: false
+    - enable: true
+      name: ui-git2
+      type: git
+      successNumber: 0 #should have at least 0 resources with status success in the cards status
+      config:
+        - url: https://github.com/kubernetes/examples.git
+          branch: master
+          path: cassandra
+          deployment:
+            local: true
+            online: false
             matchingLabel: false
 objectstore:
   data:
