show Ingress generated Routes

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -425,6 +425,7 @@ resource.url = URL
 resource.version = Version
 resource.violations=Violations
 resource.api.version=apiVersion
+spec.route.cluster.name=Route name
 
 routes.applications = Applications
 
