--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -11,6 +11,7 @@ git:
           token: ""
           branch: master
           path: mortgagedc
+          insecureSkipVerifyOption: true
           timeWindow:
             setting: true
             type: activeinterval
@@ -151,6 +152,7 @@ helm:
           username: ""
           password: ""
           chartName: aerospike
+          insecureSkipVerifyOption: true
           timeWindow:
             setting: true
             type: blockinterval
