generate Route object for Ingress (#814)
* tag testcases

* show Ingress generated Routes

* add tests

* order nl properties

* fix name overwrite

Co-authored-by: Valentina Birsan <vbirsan@vbirsan@redhat.com-mac>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -425,7 +425,6 @@ resource.url = URL
 resource.version = Version
 resource.violations=Violations
 resource.api.version=apiVersion
-
 routes.applications = Applications
 
 search.label = Search
@@ -438,6 +437,7 @@ spec.deploy.deployed.ns=Created
 spec.deploy.deployed=Deployed
 spec.deploy.not.deployed.ns=Not Created
 spec.deploy.not.deployed=Not Deployed
+spec.route.cluster.name=Route name
 spec.selector.matchExpressions.err=This application has no subscription match selector (spec.selector.matchExpressions)
 spec.selector.matchExpressions=Subscription Selector
 spec.subscr.annotations.gitBranch=Git branch
