--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
+    "monaco-editor": "^0.20.0",
     "morgan": "^1.10.0",
     "nconf": "^0.10.0",
     "node-i18n-util": "^1.0.2",
@@ -195,7 +196,7 @@
     "jest-yaml-transform": "^0.2.0",
     "jsonfile": "^4.0.0",
     "lint-staged": "^7.0.0",
-    "monaco-editor-webpack-plugin": "^2.0.0",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^2.1.4",
     "prettier": "1.11.0",
