--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -71,7 +71,7 @@ clusterSelector.label.field.ui=Label
 clusterSelector.label.placeholder.field=Label name
 clusterSelector.value.placeholder.field=Label value
 clusterSelector.value.field.ui=Value
-clusterSelector.value.field=Value
+clusterSelector.value.field=Label value
 
 combo.subscription = Subscription
 combo.subscription.all = All Subscriptions
