avoid local deploy when hubmanaged is false (#817)
* wip

* Convert ControlData to allow asynchronous load

* refactor the search logic

* rename function

* fix code smell

Co-authored-by: Kevin Cormier <kcormier@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -121,6 +121,7 @@ creation.app.section.techPreview=Tech preview
 creation.app.settings.existingRule = Select an existing placement configuration
 creation.app.settings.localClusters = Deploy on local cluster
 creation.app.settings.onlineClusters = Deploy to all online clusters and local cluster
+creation.app.settings.onlineClustersOnly = Deploy to all online clusters
 creation.app.settings.selectorClusters.config = Enter one or more matching labels to select the clusters to deploy to
 creation.app.settings.selectorClusters.prop.add = Add another label
 creation.app.settings.timeWindow = Deployment window
@@ -572,6 +573,7 @@ tooltip.creation.app.settings.clusterSelector=Deploy application resources only 
 tooltip.creation.app.settings.existingRule=If available in the application namespace, you can select a predefined placement configuration 
 tooltip.creation.app.settings.localClusters=Deploy application resources on local cluster only
 tooltip.creation.app.settings.onlineClusters=Deploy your application resources on all online clusters, including your local cluster.
+tooltip.creation.app.settings.onlineClustersOnly=Deploy your application resources on all online clusters.
 
 topology.details.close = Close topology details view
 topology.filter.category.clusterStatuses = Cluster status
