update timeout on failure

--- a/tests/cypress/config/config.e2e.yaml
+++ b/tests/cypress/config/config.e2e.yaml
@@ -6,7 +6,7 @@ git:
       type: git
       successNumber: 0 #should have at least 0 resources with status success in the cards status
       new: # used when we add new subscriptions after app creation
-        - url: https://github.com/fxiang1/app-samples.git
+        - url: https://dummy/insecureSkipVerifyOption
           username: ""
           token: ""
           branch: master
@@ -30,6 +30,7 @@ git:
             matchingLabel: false
       config:
         - url: https://github.com/fxiang1/app-samples.git
+          resources: ["Route", "Service", "Ingress"] #the type of resources this application must deploy
           username: ""
           token: ""
           branch: master
@@ -55,18 +56,6 @@ git:
           token: ""
           branch: master
           path: helloworld
-          deployment:
-            local: true
-            online: false
-            matchingLabel: false
-    - enable: true
-      name: ui-git2
-      type: git
-      successNumber: 0 #should have at least 0 resources with status success in the cards status
-      config:
-        - url: https://github.com/kubernetes/examples.git
-          branch: master
-          path: cassandra
           deployment:
             local: true
             online: false
@@ -148,7 +137,7 @@ helm:
       type: helm
       successNumber: 0
       new: # used when we add new subscriptions after app creation
-        - url: https://kubernetes-charts.storage.googleapis.com
+        - url: https://dummy/helminsecureSkipVerifyOption
           username: ""
           password: ""
           chartName: aerospike
