--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=open-cluster-management_application-ui
 sonar.projectName=application-ui
 sonar.sources=src-web
-sonar.exclusions=test-output/**/*,node_modules/**/*,src-web/index.js
+sonar.exclusions=test-output/**/*,node_modules/**/*,src-web/index.js,src-web\components\ApplicationCreationPage\ApplicationCreationPage.js
 sonar.tests=tests
 sonar.javascript.lcov.reportPaths=test-output/coverage/lcov.info
 sonar.testExecutionReportPaths=test-report.xml
