--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=development node app.js",
     "start:production": "cross-env NODE_ENV=production node app.js",
     "clean": "del-cli dll public/*",
+    "build:test": "webpack --progress",
     "build:watch": "webpack --progress --watch",
     "build": "npm run clean && webpack --config webpack.dll.js --progress && webpack --progress",
     "build:production": "npm run build:dll:production && cross-env BUILD_ENV=production webpack",
@@ -105,7 +106,7 @@
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
-    "monaco-languageclient": "^0.13.0",
+    "monaco-editor": "^0.20.0",
     "morgan": "^1.10.0",
     "nconf": "^0.10.0",
     "node-i18n-util": "^1.0.2",
@@ -126,7 +127,6 @@
     "react-dom": "^16.14.0",
     "react-lazyload": "^2.6.9",
     "react-masonry-component": "^6.2.1",
-    "react-monaco-editor": "0.36.0",
     "react-native-base64": "0.0.2",
     "react-redux": "^5.1.2",
     "react-router-dom": "^4.2.2",
@@ -145,6 +145,7 @@
     "svg-react-loader": "^0.4.6",
     "svg-sprite-loader": "^5.0.0",
     "svg.js": "^2.6.5",
+    "temptifly": "^0.1.8",
     "watchr": "^4.0.1",
     "webpack-sources": "^1.1.0",
     "yaml": "^1.7.2",
@@ -195,7 +196,7 @@
     "jest-yaml-transform": "^0.2.0",
     "jsonfile": "^4.0.0",
     "lint-staged": "^7.0.0",
-    "monaco-editor-webpack-plugin": "^1.9.1",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^2.1.4",
     "prettier": "1.11.0",
