Set up empty state messages for tables

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -293,10 +293,12 @@ name.label = Name
 
 nested.table.selected= Selected
 
-no-resource.description.line1 = You don’t have any applications, yet.
-no-resource.description.line2.1 = Click the
-no-resource.description.line2.2 = button to create the resource and view the documentation.
-no-resource.title = No applications found
+no-resource.application.title = You don’t have any applications
+no-resource.application.message = Click the {0} button to create your resource.
+no-resource.subscription.title = You don’t have any subscriptions
+no-resource.placementrule.title = You don’t have any placement rules
+no-resource.channel.title = You don’t have any channels
+no-resource.documentation.message = View the documentation for more information.
 
 overview.error.default = An unexpected error occurred. Try again.
 overview.menu.filter=Filter
