use latest temptifly

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@open-cluster-management/ui-components": "^0.1.78",
     "@patternfly/react-core": "^4.75.2",
     "@patternfly/react-icons": "^4.7.4",
-    "@patternfly/react-tokens": "2.8.13",
+    "@patternfly/react-tokens": "^4.9.18",
     "apollo-boost": "^0.1.20",
     "apollo-client": "^2.2.8",
     "apollo-link-retry": "^2.2.14",
@@ -145,7 +145,7 @@
     "svg-react-loader": "^0.4.6",
     "svg-sprite-loader": "^5.0.0",
     "svg.js": "^2.6.5",
-    "temptifly": "^0.1.8",
+    "temptifly": "^0.1.9",
     "watchr": "^4.0.1",
     "webpack-sources": "^1.1.0",
     "yaml": "^1.7.2",
